--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dodge Animation</title>
+
+    <!-- custom styles -->
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+
+
+
+
+
+
+<!-- GSAP hookup -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
