--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <main>
+        <section class="frame frame-1">
+            <img src="images/frame-1.jpg" alt="">
+            <div class="logo-button">
+                <img src="images/dodge-logo.svg" alt="">
+            </div>
+        </section>
+        <section>
+            <img class="full-van" src="images/frame-4.jpg" alt="">
+        </section>
+    </main>
 
 
 
