--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 <body>
     <main>
-        <section class="frame frame-1">
+
+        <section class="frame-1">
             <img src="images/frame-1.jpg" alt="">
-            <div class="logo-button">
-                <img src="images/dodge-logo.svg" alt="">
-            </div>
         </section>
-        <section>
-            <img class="full-van" src="images/frame-4.jpg" alt="">
+        <section class="frame-2">
+            <img class="full-van" src="images/full-van.jpg" alt="full dodge van">
         </section>
+        <div class="logo-button">
+            <img src="images/dodge-logo.svg" alt="">
+            <!-- <button>Get More</button> -->
+        </div>
     </main>
 
 
