--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         </section>
         <div class="logo-button">
             <img src="images/dodge-logo.svg" alt="">
-            <!-- <button>Get More</button> -->
+            <a class="get-more" href="#">Get more</a>
         </div>
     </main>
+
+
+ 
 
 
 
