--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
 </head>
 <body>
     <main>
-
         <section class="frame-1">
-            <img src="images/frame-1.jpg" alt="">
+            <div class="frame-text text-1">
+                <h1>Industry-Exclusive</h1>
+                <h1>Stow 'N Go <sup>&reg;</sup> Seating</h1>
+            </div>
+            <img class="frame-1" src="images/frame-1.jpg" alt="">
         </section>
         <section class="frame-2">
+            <div class="frame-text text-2">
+                <h1>Designed For Families</h1>
+            </div>
+            <div class="frame-text text-3">
+                <h1>And all their family stuff.</h1>
+            </div>
+
             <img class="full-van" src="images/full-van.jpg" alt="full dodge van">
-        </section>
-        <div class="logo-button">
+        </section> -->
+       <div class="logo-button">
             <img src="images/dodge-logo.svg" alt="">
             <a class="get-more" href="#">Get more</a>
         </div>
