--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             <img class="frame-1" src="images/frame-1.jpg" alt="">
         </section>
         <section class="frame-2">
-            <div class="frame-text text-2">
-                <h1>Designed For Families</h1>
-            </div>
-            <div class="frame-text text-3">
-                <h1>And all their family stuff.</h1>
+            <div class="frame-text">
+                <div class="text-2">
+                    <h1>Designed For Families</h1>
+                </div>
+                <div class="text-3">
+                    <h1>And all their family stuff.</h1>
+                </div>
             </div>
 
             <img class="full-van" src="images/full-van.jpg" alt="full dodge van">
