--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dodge Animation</title>
+    <link rel="icon" type="image/svg" src="images/dodge-logo.svg">
 
     <!-- custom styles -->
     <link rel="stylesheet" href="styles/styles.css">
@@ -19,22 +20,25 @@
             <img class="frame-1" src="images/frame-1.jpg" alt="">
         </section>
         <section class="frame-2">
-            <div class="frame-text">
-                <div class="text-2">
-                    <h1>Designed For Families</h1>
-                </div>
-                <div class="text-3">
-                    <h1>And all their family stuff.</h1>
-                </div>
+            <div class="frame-text text-2">
+                <h1 class="text-2">Designed For Families</h1>
+            </div>
+            <div class="frame-text text-3">
+                <h1 class="text-3">And all their family stuff.</h1>
+            </div>
+            <div class="frame-text text-4">
+                <h1 class="text-4">The 2016 Grand Caravan</h1>
+                <h1 class="text-5">Best-selling minivan for over 33 years</h1>
             </div>
 
             <img class="full-van" src="images/full-van.jpg" alt="full dodge van">
-        </section> -->
+        </section> 
        <div class="logo-button">
             <img src="images/dodge-logo.svg" alt="">
             <a class="get-more" href="#">Get more</a>
         </div>
     </main>
+
 
 
  
