--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             <img class="frame-1" src="images/frame-1.jpg" alt="">
         </section>
         <section class="frame-2">
+            <img class="gradient" src="images/gradient-overlay.png" alt="">
             <div class="frame-text text-2">
                 <h1 class="text-2">Designed For Families</h1>
             </div>
             <div class="frame-text text-3">
                 <h1 class="text-3">And all their family stuff.</h1>
             </div>
-            <div class="frame-text text-4">
+            <div class="frame-text">
                 <h1 class="text-4">The 2016 Grand Caravan</h1>
                 <h1 class="text-5">Best-selling minivan for over 33 years</h1>
             </div>
