--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="frame-1">
             <div class="frame-text text-1">
                 <h1>Industry-Exclusive</h1>
-                <h1>Stow 'N Go <sup>&reg;</sup> Seating</h1>
+                <h1>Stow &rsquo;N Go<sup>&reg;</sup> Seating</h1>
             </div>
             <img class="frame-1" src="images/frame-1.jpg" alt="">
         </section>
