--- a/index.html
+++ b/index.html
@@ -17,38 +17,27 @@
                 <h1>Industry-Exclusive</h1>
                 <h1>Stow &rsquo;N Go<sup>&reg;</sup> Seating</h1>
             </div>
-            <img class="frame-1" src="images/frame-1.jpg" alt="">
+            <img class="frame-1" src="images/frame-1.jpg" alt="Dodge interior">
         </section>
         <section class="frame-2">
-            <img class="gradient" src="images/gradient-overlay.png" alt="">
-            <div class="frame-text text-2">
+            <img class="gradient" src="images/gradient-overlay.png" alt="image gradient overlay">
+            <div class="frame-text">
                 <h1 class="text-2">Designed For Families</h1>
             </div>
-            <div class="frame-text text-3">
+            <div class="frame-text">
                 <h1 class="text-3">And all their family stuff.</h1>
             </div>
             <div class="frame-text">
                 <h1 class="text-4">The 2016 Grand Caravan</h1>
                 <h1 class="text-5">Best-selling minivan for over 33 years</h1>
             </div>
-
-            <img class="full-van" src="images/full-van.jpg" alt="full dodge van">
+            <img class="full-van" src="images/full-van.jpg" alt="full Dodge van">
         </section> 
        <div class="logo-button">
-            <img src="images/dodge-logo.svg" alt="">
+            <img src="images/dodge-logo.svg" alt="Dodge logo">
             <a class="get-more" href="#">Get more</a>
         </div>
     </main>
-
-
-
- 
-
-
-
-
-
-
 <!-- GSAP hookup -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script src="script.js"></script>
